Fixed grammar errors

--- a/SA and NSP on EDOS.ipynb
+++ b/SA and NSP on EDOS.ipynb
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "d19243d1-9a72-4d70-a0ac-72054e3c4bc3"
       },
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "KtLmNWEYN6s7",
         "colab": {
@@ -157,7 +157,7 @@
       "metadata": {
         "id": "dWEXC4vKQ8qa"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [],
       "id": "dWEXC4vKQ8qa"
     },
@@ -368,7 +368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "44a6e0d3-bc28-4ea1-8ffb-aae536515a53"
       },
@@ -394,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "f0a21112-c0f5-42c8-88df-86a518380847"
       },
@@ -416,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "2VsKyigWxfmS"
       },
@@ -5681,7 +5681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "Y8G_L425nA5z",
         "outputId": "d8e463df-e15a-4d04-e302-3c80479587e0",
@@ -5729,7 +5729,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "yhMI0BtJQJ1Y"
       },
@@ -5752,7 +5752,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "t2Yyhh0qQJnk"
       },
@@ -5766,7 +5766,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "N1efWXK-QJf6",
         "outputId": "8dff0189-104e-48f1-a4ba-5a5751d1568b",
@@ -5809,7 +5809,7 @@
       "metadata": {
         "id": "RhXPAHCkVXLu"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [],
       "id": "RhXPAHCkVXLu"
     },
@@ -5963,7 +5963,7 @@
         "outputId": "2043d45c-1b88-4da5-90d8-e6090da1b440"
       },
       "id": "8rBwshqKmkH9",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6049,7 +6049,7 @@
         "outputId": "039cb3bc-e421-4475-ae87-588304064525"
       },
       "id": "ugGU1uOjmlqj",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6123,7 +6123,7 @@
         "outputId": "7c8f0737-2ad9-49dc-b3f9-87da77cd9e44"
       },
       "id": "Qoq7v8dImpex",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6178,7 +6178,7 @@
         },
         "outputId": "48e08094-7437-4d65-d2d0-b11d406895ff"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6204,7 +6204,7 @@
         },
         "outputId": "23904c24-1d2d-4aa4-b59d-e0098fb30f9f"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6240,7 +6240,7 @@
         "outputId": "2c4a7412-9a2b-4091-a26f-d4a991c42411"
       },
       "id": "Pnvs-qTvoJxz",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6274,7 +6274,7 @@
         },
         "outputId": "b4d2bc98-b3de-4abe-fefd-0968c93bea51"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6300,7 +6300,7 @@
         },
         "outputId": "00d10d5d-9009-4fb8-ef86-e1d83a6983e9"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6344,7 +6344,7 @@
         "outputId": "2ec08793-cac2-4596-a9e6-0d912e09cdf3"
       },
       "id": "kkAKeveOoK5D",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6419,7 +6419,7 @@
         },
         "outputId": "0200420f-3b2e-4eda-8365-997a7fe9b144"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6463,7 +6463,7 @@
         "outputId": "a3fe4a6a-49bb-40ad-b5c0-cedb75cc4290"
       },
       "id": "Q6QswYwKoQrG",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6511,7 +6511,7 @@
         },
         "outputId": "83c43022-2a4a-4932-c9c2-e6fe8af4e7b0"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6555,7 +6555,7 @@
         "outputId": "e8c62497-30de-4598-f727-12141a2d7c5e"
       },
       "id": "kQs86wRSoev7",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6824,10 +6824,10 @@
         "id": "9c39dc0c-4f84-4860-975b-11d96356acd3"
       },
       "source": [
-        "We now need to encode labels. To do that we can use Label Encoding, which associates a integer number to each class,so in our case each one of our emotions will be mapped to a number between 0 and 40.\n",
+        "We now need to encode labels. To do that we can use Label Encoding, which associates an integer number to each class, so in our case each one of our emotions will be mapped to a number between 0 and 40.\n",
         "In alternative we also can use One-Hot Encoding, which transforms each class to a sparse one-hot encoded vector.\n",
         "\n",
-        "Label Encoding introduces a problem because the model may derive a ordinal correlation of some sort due to the fact that labels are mathematically related (i.e: if 0 is cat, 1 is dog and 2 is tiger, the model could derive that average between cat and tiger is dog whic is obviously wrong).\n",
+        "Label Encoding introduces a problem because the model may derive an ordinal correlation of some sort due to the fact that labels are mathematically related (i.e: if 0 is cat, 1 is dog and 2 is tiger, the model could derive that average between cat and tiger is dog which is obviously wrong).\n",
         "\n",
         "In multi-class sentiment analysis both encodings are interesting but after some tests we found out that label encoding works best, capturing the intuitive ordinal relationship between the emotions (i.e: angry is 0, furious is 1 so furious > angry)."
       ]
@@ -7000,7 +7000,6 @@
       "execution_count": null,
       "id": "784f1294-1f9d-44b1-8459-28f5d8dd3845",
       "metadata": {
-        "collapsed": true,
         "jupyter": {
           "outputs_hidden": true
         },
@@ -7549,7 +7548,7 @@
         "id": "7f405594-729b-4f2e-9bda-be208db4bb0f"
       },
       "source": [
-        "As first model, we will build,train and evaluate a simple ANN, made of 2 Dense layers with 64 neurons each, plus the classification head that will produce the probabilities by applying softmax activation function to the input logits.\n",
+        "As first model, we will build, train and evaluate a simple ANN, made of 2 Dense layers with 64 neurons each, plus the classification head that will produce the probabilities by applying softmax activation function to the input logits.\n",
         "\n",
         "As regularization technique, we will also add two Dropout layers with rate=0.2. This means that at each iteration, 20% of the neurons of the layer on which dropout is applied won't be used. In this way the model should be able to better generalize on unseen data and reduce overfitting as a consequence."
       ]
@@ -8680,7 +8679,7 @@
         "id": "3af9f3de-7912-48bb-8b89-53321cbbeaf0"
       },
       "source": [
-        "In this section, we will train all the models again by using Word2Vec Embeddings and compare the results.An embedding maps a word to a semantic vector. We call those semantic vector because they preserve semantic information related to the word they represent.In particular, words with a semantic relationship correspond to vectors that are close together in the vector space. They usually perform better than TF-IDF,BoW and similar. The main reasons are two:\n",
+        "In this section, we will train all the models again by using Word2Vec Embeddings and compare the results. An embedding maps a word to a semantic vector. We call those semantic vectors because they preserve semantic information related to the word they represent.In particular, words with a semantic relationship correspond to vectors that are close together in the vector space. They usually perform better than TF-IDF, BoW and similar. The main reasons are two:\n",
         "\n",
         "- dense vectors vs sparse vectors: Embeddings are much smaller than sparse encoding methods since they produce dense vectors so training and inference are usually faster.\n",
         "\n",
